Fix background not stretching with goals

--- a/step-over-frontend/goal-frontend/src/App.css
+++ b/step-over-frontend/goal-frontend/src/App.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   text-align: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100%;
 }
 
 body {
